chore: move to java 11+ (#272). Fixed #154